--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 
                 <div onclick="openOrder('Behel fashion 8brecket a/b', '800฿')" class="service-card">
-                    <img src="LINK_GAMBAR_DI_SINI" alt="Behel 8" class="big-preview-img">
+                    <img src="https://i.ibb.co/JRJqMv2b/photo-2026-02-07-06-59-24.jpg" alt="Behel 8" class="big-preview-img">
                     <div class="p-6">
                         <h3 class="font-bold text-slate-800 text-lg">Behel Fashion 8 Brecket</h3>
                         <p class="text-xs text-slate-400 italic mb-4">Atas Atau Bawah</p>
@@ -91,7 +91,7 @@
                 </div>
 
                 <div onclick="openOrder('Behel fashion 10brecket a/b', '1000฿')" class="service-card">
-                    <img src="LINK_GAMBAR_DI_SINI" alt="Behel 10" class="big-preview-img">
+                    <img src="https://i.ibb.co/Mxz1Thpv/photo-2026-02-07-06-58-27.jpg" alt="Behel 10" class="big-preview-img">
                     <div class="p-6">
                         <h3 class="font-bold text-slate-800 text-lg">Behel Fashion 10 Brecket</h3>
                         <p class="text-xs text-slate-400 italic mb-4">Atas Atau Bawah</p>
@@ -100,7 +100,7 @@
                 </div>
 
                 <div onclick="openOrder('Behel Perawatan a/b', '3000฿')" class="service-card">
-                    <img src="LINK_GAMBAR_DI_SINI" alt="Perawatan" class="big-preview-img">
+                    <img src="https://i.ibb.co/B57zZPjD/photo-2026-02-07-06-57-56.jpg" alt="Perawatan" class="big-preview-img">
                     <div class="p-6">
                         <h3 class="font-bold text-slate-800 text-lg">Behel Perawatan</h3>
                         <p class="text-xs text-slate-400 italic mb-4">Professional Care (Atas/Bawah)</p>
@@ -136,7 +136,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 
                 <div onclick="openOrder('Eyelash Natural', '400฿')" class="service-card">
-                    <img src="LINK_GAMBAR" alt="Natural" class="big-preview-img">
+                    <img src="https://i.ibb.co/1tjX9H8k/photo-2026-02-07-07-00-46.jpg" alt="Natural" class="big-preview-img">
                     <div class="p-6 text-center">
                         <h3 class="font-bold text-slate-800 text-lg">Natural</h3>
                         <p class="text-2xl font-bold text-pink-500 mt-2">400฿</p>
@@ -152,7 +152,7 @@
                 </div>
 
                 <div onclick="openOrder('Eyelash Double volume', '600฿')" class="service-card">
-                    <img src="LINK_GAMBAR" alt="Double volume" class="big-preview-img">
+                    <img src="https://i.ibb.co/84QTY3Qk/photo-2026-02-07-07-01-33.jpg" alt="Double volume" class="big-preview-img">
                     <div class="p-6 text-center">
                         <h3 class="font-bold text-slate-800 text-lg">Double Volume</h3>
                         <p class="text-2xl font-bold text-pink-500 mt-2">600฿</p>
@@ -168,7 +168,7 @@
                 </div>
 
                 <div onclick="openOrder('Eyelash Cat Eye', '700฿')" class="service-card">
-                    <img src="LINK_GAMBAR" alt="Cat Eye" class="big-preview-img">
+                    <img src="https://i.ibb.co/xWWgVfJ/photo-2026-02-07-07-02-32.jpg" alt="Cat Eye" class="big-preview-img">
                     <div class="p-6 text-center">
                         <h3 class="font-bold text-slate-800 text-lg">Cat Eye</h3>
                         <p class="text-2xl font-bold text-pink-500 mt-2">700฿</p>
@@ -231,3 +231,4 @@
 </body>
 
 </html>
+
