--- a/index.html
+++ b/index.html
@@ -135,6 +135,15 @@
                     </div>
                 </div>
 
+                <div onclick="openOrder('Diamond Gigi', '200฿', 'https://i.ibb.co/0Tb1kSK/photo-2026-02-07-07-14-43.jpg')" class="service-card">
+                    <img src="https://i.ibb.co/0Tb1kSK/photo-2026-02-07-07-14-43.jpg" alt="Diamond Gigi" class="big-preview-img">
+                    <div class="p-6">
+                        <h3 class="font-bold text-slate-800 text-lg">Diamond Gigi</h3>
+                        <p class="text-xs text-slate-400 italic mb-4">Berkilau & Elegan</p>
+                        <p class="text-2xl font-bold text-pink-500">200฿</p>
+                    </div>
+                </div>
+
             </div>
         </section>
 
@@ -181,24 +190,6 @@
                     <div class="p-6 text-center">
                         <h3 class="font-bold text-slate-800 text-lg">Cat Eye</h3>
                         <p class="text-2xl font-bold text-pink-500 mt-2">700฿</p>
-                    </div>
-                </div>
-
-            </div>
-        </section>
-
-        <section class="mb-16">
-            <h2 class="text-2xl font-bold mb-8 flex items-center gap-3 text-pink-600 uppercase tracking-widest">
-                <span class="text-3xl">💎</span> DIAMOND GIGI
-            </h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                
-                <div onclick="openOrder('Diamond Gigi', '200฿', 'https://i.ibb.co/0Tb1kSK/photo-2026-02-07-07-14-43.jpg" class="service-card">
-                    <img src="https://i.ibb.co/0Tb1kSK/photo-2026-02-07-07-14-43.jpg" alt="Diamond Gigi" class="big-preview-img">
-                    <div class="p-6 text-center">
-                        <h3 class="font-bold text-slate-800 text-lg">Diamond Gigi</h3>
-                        <p class="text-xs text-slate-400 italic mb-4">Berkilau & Elegan</p>
-                        <p class="text-2xl font-bold text-pink-500">200฿</p>
                     </div>
                 </div>
 
